--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,11 @@
- <div class="header">
-     <div class="container">
-         <h1 class="logo"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
-         <nav class="nav-collapse">
-             <ul class="noList">
-                 {% for link in site.navigation %}{% assign current = nil %}{% if page.url contains link.url %}{% assign current = 'current' %}{% endif %}
-                 <li class="element {% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}">
-                     <a href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
-                 </li> 
-                 {% endfor %}
-                 <li> <a href="https://github.com/brianmaierjr/long-haul" target="_blank">GitHub</a></li>
-                 <li><a href="https://github.com/brianmaierjr/long-haul/archive/master.zip">Download Theme</a></li>
-             </ul>
-         </nav>
-     </div>
- </div><!-- end .header -->
+
+{% if page.url == "/" %}
+  <p>Heyo! <strong>pli88</strong> here.</p>
+  <p>JavaScript enthu at <a href="http://www.goldspotmedia.com">GoldSpot Media</a>.</p>
+  <nav class="bold">
+    {% for link in site.links %}
+      <a id="ind-{{ link.name | downcase }}" href="{{ link.url }}">{{ link.name }}</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    {% endfor %}
+  </nav>
+{% endif %}
+<hr />
