--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,32 +1,63 @@
----
-layout: default
----
-<div class="post">
-  {% if page.image %}
-    <div class="featuredImage">
-        <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.image }}" alt="" />
-      </div>
-  {% endif %}
-  <h1 class="postTitle">{{ page.title }}</h1>
-  <p class="meta">{{ page.date | date: '%B %d, %Y' }} | <span class="time">{{ page.content | number_of_words | divided_by:180 }}</span> Minute Read</p>
-  
-  {{ content }}
+<html>
+  <head>
+    <meta content='{{ site.title }}' property='og:title' />
+    <title>{{ site.title }}</title>
+    {% include head.html %}
+  </head>
+  <body>
+    <div class="wrapper">
 
-  <!-- POST NAVIGATION -->
-  <div class="postNav clearfix">
-    {% if page.previous.url %} 
-      <a class="prev{% if page.previous.image %} image{% endif %}" href="{{ page.previous.url | prepend: site.baseurl }}"><span>&laquo;&nbsp;{{ page.previous.title }}</span>
-      {% if page.previous.image %} 
-        <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.previous.image }}" alt="">
-      {% endif %}
-    </a>
-    {% endif %}  
-    {% if page.next.url %}  
-      <a class="next{% if page.next.image %} image{% endif %}" href="{{ page.next.url | prepend: site.baseurl }}"><span>{{ page.next.title }}&nbsp;&raquo;</span>
-      {% if page.next.image %} 
-        <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.next.image }}" alt="">
-      {% endif %} 
-      </a>
-    {% endif %} 
-  </div>
-</div>
+      <header>
+        {% include header.html %}
+      </header>
+
+      <div class="content-wrapper">
+        <section class="content">
+          <article>
+            <h3 class="reset bold upcase a">{{ page.title }}</h3>
+            {% if page.date %}
+              <small class="datetime muted">{{ page.date | date_to_string }}</small>
+            {% endif %}
+            <hr>
+            {{ content }}
+          </article>
+          {% unless page.url == "/about/" %}{% include signoff.html %}{% endunless %}
+          <div class="pagination">
+            {% if page.previous %}
+              <hr />
+              <p class="toned upcase small">Use ← and → to navigate between posts.</p>
+              <hr />
+              <a href="{{ page.previous.url }}" id="js-previous-post">
+                <div class="arrow big">❰</div>
+                <p><span class="small toned upcase">
+                  Previous Post</span>
+                  <br />
+                  <span class="bold link">{{ page.previous.title }}</span>
+                  <p class="toned small">{{ page.previous.content | strip_html | truncate: 200 }}</p>
+                  <span class="small upcase datetime muted">{{ page.previous.date | date_to_string }}</span>
+                </p>
+              </a>
+            {% endif %}
+            {% if page.next %}
+              <hr />
+              <a href="{{ page.next.url }}" id="js-next-post">
+                <div class="arrow big">❱</div>
+                <p><span class="small toned upcase">
+                  Next Post</span>
+                  <br />
+                    <span class="bold link">{{ page.next.title }}</span>
+                  <br />
+                  <p class="toned small">{{ page.next.content | strip_html | truncate: 200 }}</p>
+                  <span class="small upcase datetime muted">{{ page.next.date | date_to_string }}</span>
+                </p>
+              </a>
+            {% endif %}
+          </div>
+        </section>
+      </div>
+      <footer>
+        {% include footer.html %}
+      </footer>
+    </div>
+  </body>
+</html>
