--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <hr />
 <p class="small upcase bold">
-  The blog is built with <a href="http://jekyllrb.com/" target="_blank" id="jekyll">Jekyll</a> hosting on <a href="http://github.com/muan/muan.github.com" target="_blank" id="repo">GitHub Pages</a></a>.
+  The blog is built with <a href="http://jekyllrb.com/" target="_blank" id="jekyll">Jekyll</a> hosted on <a href="https://pages.github.com/" target="_blank" id="repo">GitHub Pages</a></a>. Based theme build by <a href="http://www.github.com/muan">Muan</a>
 </p>
