Fixed missing styles

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,7 @@
 
 {% if page.url == "/" %}
+ <img src="../images/pli88.jpg" alt="pli88 image">
+ <p>Resident of planet earth. Goes by the name pli88</p>
   <nav class="bold">
     {% for link in site.links %}
       <a id="ind-{{ link.name | downcase }}" href="{{ link.url }}">{{ link.name }}</a>&nbsp;&nbsp;&nbsp;&nbsp;
